# geomapviz

./: README.md  pyproject.toml  setup.py
.github/workflows/: black.yml
beshp/: belgium.dbf  belgium.shp
docs/: Installation.rst  Introduction.rst  conf.py  geomapviz.rst  index.rst  modules.rst  requirements.txt
docs/nb/: geomap.ipynb
geomapviz/: __init__.py  geomapviz.py
nb/: geomap.ipynb
src/: geomapviz.py
src/geomapviz/: __init__.py  aggregator.py  geomapviz.py  plot.py  shapefiles.py  utils.py
src/geomapviz/bckgd/: belgium_sd.tif
src/geomapviz/shp/: Italy_region.dbf  Italy_region.prj  Italy_region.shx  belgium.shx  nl_pc4_2014.dbf  nl_pc4_2014.shx  nl_pc4_2015.dbf  nl_pc4_2015.shx  nl_pc4_2015.sld
tests/: test_geomapviz.py
