[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "geomapviz.__version__"}

[tool.setuptools]
package-data = {"*" = ["**/*.gz", "**/*.dbf", "**/*.cpg", "**/*.shp", "**/*.shx", "**/*.prj", "**/*.qpj", "**/*.sld" ,"**/*.tif"]}

[project]
name = "geomapviz"
dynamic = ["version"]
requires-python = ">=3.8"
description = "data visualization on maps with varying levels of granularity"
authors = [{name = "Thomas Bury", email = "bury.thomas@gmail.com"}]
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["geographical", "visualization", "map", "interactive", "choropleth"]
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
  "holoviews>=1.14.8",
  "geoviews",
  "matplotlib>=3.5",
  "numpy>=1.21",
  "pandas>=1.4",
  "geopandas",
  "mapclassify",
  "contextily",
  "panel>=0.13",
  "scipy>=1.8.0",
  "seaborn>=0.11.2",
  "tqdm>=4.62.3",
  "cartopy"
]


[project.urls]
homepage = "https://github.com/ThomasBury/geomapviz"
documentation = "https://github.com/ThomasBury/geomapviz"
repository = "https://github.com/ThomasBury/geomapviz.git"
changelog = "https://github.com/ThomasBury/geomapviz"
Tracker = "https://github.com/ThomasBury/geomapviz/issues"

[project.optional-dependencies]
doc = [
  "ipykernel",
  "ipython_genutils",
  "pandoc",
  "sphinx",
  "sphinxawesome-theme==4.1.0",
  "nbsphinx==0.9.2",
  "sphinx-autodoc-typehints<1.24.0",
  "sphinx-copybutton==0.5.2",
  "sphinx-tabs==3.4.1",
]
lint = [
  "black",
  "flake8"
]
test = [
  "pytest",
  "pytest-cov",
]